# MineSweeper

./: .clang-format  .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Constants.h  Game.cpp  Grid.cpp  Grid.h  main.cpp
include/: Cell.h  Constants.h  Game.h  Grid.h
src/: Cell.cpp  Game.cpp  Grid.cpp  main.cpp
